<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>br.com.capoeirassh</groupId>
    <artifactId>capoeira-ssh</artifactId>
    <version>1.7.0</version>
    <packaging>jar</packaging>
    <name>Capoeira SSH Client</name>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <swt.version>3.134.0</swt.version>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
        <junit.version>5.10.2</junit.version>
        <!-- Tests tagged "slow" (currently: CredentialStoreConcurrencyTest, ~7-8 min, over 80%
             of a full run) are excluded from the default `mvn test`. Run them explicitly before
             a release, or whenever code they cover changes directly, with:
               mvn test -Dtest.excludedGroups=
             (the empty value clears the exclusion for that invocation only). -->
        <test.excludedGroups>slow</test.excludedGroups>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.mwiede</groupId>
            <artifactId>jsch</artifactId>
            <version>2.28.6</version>
        </dependency>

        <!-- Serial (RS232) terminal support — pure-Java, bundles its own native libs per OS,
             so no extra Maven profile is needed the way SWT above requires one. -->
        <dependency>
            <groupId>com.fazecast</groupId>
            <artifactId>jSerialComm</artifactId>
            <version>2.11.4</version>
        </dependency>

        <!-- KeePass (.kdbx) import support. Used ONLY by the disposable reader subprocess
             entry point (br.com.capoeirassh.kdbxreader.KdbxReaderMain) — never loaded in the
             main process — so that any decrypted KeePass data (which this library holds as
             ordinary Strings, not the char[]-and-zero pattern the rest of this codebase uses
             for secrets) is torn down by the OS when that subprocess exits, rather than left
             to the JVM's garbage collector. See CHANGELOG.md for the design rationale. -->
        <dependency>
            <groupId>org.linguafranca.pwdb</groupId>
            <artifactId>KeePassJava2-jackson</artifactId>
            <version>2.2.4</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <!-- Ativar explicitamente com: mvn package -P windows -->
        <profile>
            <id>windows</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
                    <version>${swt.version}</version>
                    <exclusions>
                        <exclusion>
                            <groupId>*</groupId>
                            <artifactId>*</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>linux</id>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
                    <version>${swt.version}</version>
                    <exclusions>
                        <exclusion>
                            <groupId>*</groupId>
                            <artifactId>*</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>macos</id>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
                    <version>${swt.version}</version>
                    <exclusions>
                        <exclusion>
                            <groupId>*</groupId>
                            <artifactId>*</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>macos-arm</id>
            <dependencies>
                <dependency>
                    <groupId>org.eclipse.platform</groupId>
                    <artifactId>org.eclipse.swt.cocoa.macosx.aarch64</artifactId>
                    <version>${swt.version}</version>
                    <exclusions>
                        <exclusion>
                            <groupId>*</groupId>
                            <artifactId>*</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <resources>
            <!-- Text resources only — filtering does ${...} token substitution, which
                 corrupts binary files if applied to them. -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>icons/**</exclude>
                </excludes>
            </resource>
            <!-- Icon PNGs — copied verbatim, never filtered. -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>icons/**</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <!-- Tests that touch CredentialStore (a singleton hardcoded to
                         ~/.capoeira/credentials.vault) must never read or write the real
                         developer's vault. Surefire forks a separate JVM to run tests, and
                         CredentialStore's vault path is a static final field resolved once at
                         class-load time from user.home — so overriding it only for that forked
                         JVM, before any test class loads, safely redirects it to a directory
                         under target/ (cleaned by `mvn clean`, never the real home). -->
                    <systemPropertyVariables>
                        <user.home>${project.build.directory}/test-home</user.home>
                    </systemPropertyVariables>
                    <excludedGroups>${test.excludedGroups}</excludedGroups>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>export-icons</id>
                        <phase>prepare-package</phase>
                        <goals><goal>java</goal></goals>
                        <configuration>
                            <mainClass>br.com.capoeirassh.ssh.IconExporter</mainClass>
                            <arguments>
                                <argument>${project.build.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>br.com.capoeirassh.ssh.Main</mainClass>
                                </transformer>
                                <!-- Jackson (pulled in transitively by KeePassJava2-jackson, used
                                     only by the disposable br.com.capoeirassh.kdbxreader subprocess)
                                     registers its modules via META-INF/services. Without merging
                                     those files across all the shaded jars, only the last jar's
                                     copy survives shading and KDBX parsing can fail at runtime
                                     with no compile-time warning. -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>


